app/javascript/styles/application/molecules/_lists.scss
.list {
  // color: $font-dark-primary;
}

.list.--icon {
  position: relative;
  list-style: none;
  margin-left: 0;

  li {
    position: relative;
    padding-left: 28px;
  }

  .icon {
    position: absolute;
    left: 0;
  }

  .icon.--large {
    top: 4px;
  }
}

.list.--information-list {
  display: flex;
  position: relative;
  list-style: none;
  margin-left: 0;

  li {
    padding-right: 16px;
    min-width: 86px;
  }

  li .item__primary {
    font-weight: $font-weight-bold;
    font-size: rem-calc(24);
  }

  p {
    line-height: 1.2;
  }
}

.list.--plain {
  list-style: none;
  margin-left: 0;

  .icon {
    margin-right: 4px;
  }
}

